# bees

./: .gitignore  AGENTS.md  README.md  direct-decode-two-ways.md  paper.tex  pyproject.toml  report.aux
configs/: basic.json  distance_signal.json  food_distribution_v2.json  horizontal_direction.json  long_vertical_transition.json  long_vertical_transition_unproject.json  spatial_direction.json  vertical_coupling_probe.json
experiments/: analyze_long_transition_trajectories.py  analyze_optuna_best_trajectories.py  demo_horizontal_direction.py  demo_spatial_direction.py  evolutionary_interaction.py  finalize_evolutionary_interaction.py  finalize_evolutionary_interaction_snellius.sbatch  finalize_oat_sensitivity.py  finalize_sensitivity_refinement.py  illustrate_comb_codes.py  illustrate_comb_tilt.py  illustrate_waggle_dance.py  optimize_food_transition.py  plot_evolutionary_interaction_heatmap.py  plot_evolutionary_interaction_seed_outcomes.py  plot_food_distribution_effects.py  plot_oat_sensitivity_effects.py  render_report_html.py  run_basic.py  run_distance_signal.py  run_evolutionary_interaction_array.py  run_evolutionary_interaction_array_snellius.sbatch  run_food_distribution_v2.py  run_food_distribution_v2_snellius.sbatch  run_food_transition.py  run_food_transition_local_grid.py  run_food_transition_oat_sensitivity.py  run_food_transition_v2_candidate_panel.py  run_food_transition_v2_confirmation_snellius.sbatch  run_food_transition_v2_optuna_snellius.sbatch  run_food_transition_v2_sensitivity_snellius.sbatch  run_food_transition_v2_validation_snellius.sbatch  (+19 more)
(+105 files in other folders)
